<resources>
    <string name="app_name">Javni Prevozi data</string>
    <string name="photos">Photos</string>
    <string name="voice_recordings">Voice Recordings</string>
    <string name="speedometer_sim_data">Speedometer sim data</string>
    <string name="camera_button">take picture</string>
    <string name="taken_picture">taken picture</string>
    <string name="upload">upload</string>
    <string name="play">play</string>
    <string name="record">record</string>
    <string name="simulate_string">Simulate</string>
    <string name="traffic_string">Traffic</string>
    <string name="timer_text">Send every 5 minutes</string>
</resources>